# vet

./: Cargo.toml  LICENSE  README.md  vet.md
.github/workflows/: ci.yml  release.yml  security-check.yml
docs/: claims.md  json-subset.md
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  parse.rs  run.rs  transcript.rs  util.rs
src/claims/: duration.rs  env.rs  exit.rs  files.rs  git.rs  json.rs  mod.rs  stream.rs
tests/: cli.rs
