[package]
name = "vet"
version = "0.1.0"
edition = "2021"
description = "Claim checker for agent grounding — evaluate named claims, emit evidence"
license = "MIT"
readme = "README.md"
keywords = ["cli", "testing", "claims", "agents", "verification"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/ousatov-ua/vet"

[[bin]]
name = "vet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
